front-end corrections

--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -16,9 +16,9 @@
   margin: 20px;
   margin-top: 40px;
   .content-group {
-    width: 250px;
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
+    // display: flex;
+    // justify-content: space-between;
   }
 }
 
