--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="/app/assets/images/favicon.ico">
-  <title>GALLER-I</title>
+  <title>Galler-i</title>
   <meta name="description" content="The number one art-sharing platform in the world.">
   <meta name="keywords" content="Gallery,Artwork,Art,Painting">
   <%= csrf_meta_tags %>
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/css/bootstrap-datepicker.min.css" />
   <%= stylesheet_link_tag 'application', media: 'all' %>
-  <%=   favicon_link_tag "paint.png" , type: "image/png" %>
+  <%=   favicon_link_tag "logo.png" , type: "image/png" %>
 </head>
 <body>
   <%= render 'shared/navbar' %>
