--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,12 @@
 <div class="navbar-wagon">
   <!-- Logo -->
+  <%= link_to root_path do %>
+  <div style="height: auto; max-width: 100%;"><%= image_tag "name.png"%></div>
+  <% end %>
   <div class="wrapper">
-  <strong><%= link_to "GALLER-I", root_path, style: "text-decoration: none; font-size:14px; color: #BE63C1;" %></strong>
-  <div class="navbar-right">
+
+<!--   <strong><%#= link_to "GALLER-I", root_path, style: "text-decoration: none; font-size:14px; color: #BE63C1;" %></strong>
+ -->  <div class="navbar-right">
     <div class="navbar-wagon-right hidden-xs hidden-sm">
 
       <!-- <div class="badge-container"> -->
