--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -52,21 +52,20 @@
 
 .user-profile-info {
   margin: 0 auto;
-  width: 200px;
   text-align: center;
-  margin-top: -36px;
+  margin-top: -50px;
   h1 {
-    font-size: 25px;
+    // font-size: 25px;
     font-weight: bold;
-    color: #848484;
+    // color: #848484;
   }
 }
 
 
 .user-profile-info p {
-  margin: 0 0 11px;
-  margin-top: -5px;
-  font-weight: bold;
+  // margin: 0 0 11px;
+  // margin-top: -5px;
+  // font-weight: bold;
   color: #848484;
 }
 
@@ -96,9 +95,9 @@
   z-index: -1;
   background-size: cover;
   background-position: center;
-  height: 42vh;
-  margin-left: 30px;
-  margin-right: 30px;
+  height: 30vh;
+  // margin-left: 30px;
+  // margin-right: 30px;
   position: relative;
 
 }
