changes in container width and venue

--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="wrapper">
+  <div class="wrapper" style="width: 93%">
     <div class="row">
       <div class="col-md-6">
         <% if @artwork.photo %>
@@ -40,7 +40,7 @@
 
       </div>
     </div>
-
+      <br>
     <div class="row no-margin">
       <div class="col-md-12" style=" margin: 20px 0px; padding: 0px">
         <div class="profile-header-wrapper">
