--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path do %>
-  <div style="height: auto; max-width: 100%;"><%= image_tag "name.png"%></div>
+  <div style="height: auto; max-width: 100%; margin-bottom: 10px;"><%= image_tag "name.png"%></div>
   <% end %>
   <div class="wrapper">
 
