--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -23,7 +23,7 @@
   <br><br>
 </div>
 
-<div class="container">
+<div class="container" style="width: 1290px;">
 
   <div class="wrapper">
     <div class="row">
@@ -58,7 +58,7 @@
 
         <div class="tab-content" id="request" style="height: 250px; overflow:auto">
 
-            <div class="row" style="position: absolute; display: flex; justify-content: space-between; width: 100%; margin: 10px 60px;">
+            <div class="row" style="position: absolute; padding: 5px; left: 0; right: 0;z-index: 999; margin: 0px 20px; background-color: #F2F2F2;">
               <div class ="col-md-4">
                 <p><strong>Confirmed Bookings</strong></p>
               </div>
@@ -74,7 +74,7 @@
             <div class="row">
              <div class ="col-md-4">
                <div class="text-content">
-                <p><strong>Confirmed Bookings</strong></p>
+
                 <% current_user.venues.each do |venue| %>
                 <% status = venue.appointments.where(status: "Confirmed") %>
                 <% status.each do |appointment| %>
@@ -116,7 +116,6 @@
 
             <div class ="col-md-4">
               <div class="text-content">
-                <p><strong>Declined Bookings</strong></p>
                 <% current_user.venues.each do |venue| %>
                 <% status = venue.appointments.where(status: "Declined") %>
                 <% status.each do |appointment| %>
@@ -156,7 +155,6 @@
 
             <div class ="col-md-4">
               <div class="text-content">
-                <p><strong>Pending Approval Bookings</strong></p>
                 <% current_user.venues.each do |venue| %>
                 <% status = venue.appointments.where(status: "Pending") %>
                 <% status.each do |appointment| %>
