--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -3,5 +3,11 @@
   <%= f.input :category %>
   <%= f.input :location %>
   <%= f.input :photo, as: :attachinary %>
-  <%= f.button :submit %>
+  <div class="text-center">
+  <br>
+  <%= f.button :submit, class: "btn btn-primary" %>
+  <br>
+  </div>
 <% end %>
+
+
