--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,1 +1,19 @@
-<%= render 'form' %>
+<div class="container">
+  <div class="wrapper">
+    <div class="">
+      <div class="col-md-6">
+        <h1>Hi, <%= current_user.first_name %>! Let’s get started! Create your venue!</h1>
+        <br>
+        <%= render 'form' %>
+      </div>
+
+      <div class="col-md-6">
+        <%= image_tag "image.png", style: 'width: 100%; height: auto;'%>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<br>
+
