--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,24 +1,42 @@
-<h1 class="text-center" style="margin: 40px"><%= @venue.title %></h1>
-<h2 class="text-center" style="margin: 40px"><%= @venue.category %></h2>
-<h2 class="text-center" style="margin: 40px"><%= @venue.location %></h2>
-<% @status = Appointment.where(venue_id: @venue.id) %>
-<% if @status.blank?  %>
-This Venue is showing no art :(
-<% else %>
-You can find displayed in <%= @venue.title %>:
-<br>
-<%  @status.each do |appt|%>
-<%= appt.start_date %> to <%= appt.end_date %> the <%= appt.artwork.category %>: <%=  link_to appt.artwork.title, artwork_path(appt.artwork.id)%> by renowned artist: <%= appt.artwork.owner.username %>
-<br>
-<% end %>
-<% end %>
+<div class="container">
+  <div class="wrapper">
+    <div class="row">
+      <div class="col-md-6">
+        <% if @venue.photo %>
+        <% image =  @venue.photo.path %>
+        <% else  %>
+        <% image =  "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
+        <% end %>
 
-<% if @venue.photo? %>
-  <%= cl_image_tag @venue.photo.path, width: 200, height: 300, crop: :fill %>
-<% end %>
+        <img class="full-width" src="<%= cl_image_path(image, height: 300, crop: "fill") %>" alt="sample image">
+      </div>
+      <div class="col-md-6 text-center">
+        <h1 style="margin: 0px;"><strong><%= @venue.title %></strong></h1>
+        <h5> Category: <%= @venue.category %> </h5>
+        <h5> Location: <%= @venue.location %> </h5>
 
-<h3 class="text-center" style="margin: 40px">
-  <%= link_to "Back", venues_path %>
-  <%= link_to "Edit", edit_venue_path(@venue) %>
-  <%= link_to "Delete", venue_path(@venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
-</h3>
+        <% @status = Appointment.where(venue_id: @venue.id) %>
+        <% if @status.blank?  %>
+        This Venue is showing no art :(
+        <% else %>
+        You can find displayed in <%= @venue.title %>:
+        <br>
+        <%  @status.each do |appt|%>
+        <%= appt.start_date %> to <%= appt.end_date %> the <%= appt.artwork.category %>: <%=  link_to appt.artwork.title, artwork_path(appt.artwork.id)%> by renowned artist: <%= appt.artwork.owner.username %>
+        <br>
+        <% end %>
+        <% end %>
+        <h3 class="text-center" style="margin: 40px">
+        <%= link_to "Back", profile_path %>
+        <%= link_to "Edit", edit_venue_path(@venue) %>
+        <%= link_to "Delete", venue_path(@venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
+        </h3>
+
+
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
