--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,1 +1,20 @@
-<%= render 'form' %>
+<div class="container" style="width: 1290px;">
+  <div class="wrapper">
+    <div class="">
+      <div class="col-md-6">
+        <h1>Hi, <%= current_user.first_name %>! Let’s edit your place.</h1>
+        <br>
+        <%= render 'form' %>
+
+      </div>
+
+      <div class="col-md-6">
+        <%= image_tag "restaurant.jpg", style: 'width: 100%; height: auto;'%>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<br>
+
