--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,20 +1,43 @@
-<h1 class="text-center" style="margin: 40px"><%= @venue.title %></h1>
-<h2 class="text-center" style="margin: 40px"><%= @venue.category %></h2>
-<h2 class="text-center" style="margin: 40px"><%= @venue.location %></h2>
+<div class="banner-profile" style="background-image: linear-gradient(-30deg, rgba(0,101,168,0.4) 0%, rgba(0,36,61,0.4) 4%), url(https://static.pexels.com/photos/428111/pexels-photo-428111.jpeg);">
+</div>
+<div class="user-profile-info">
+  <div class= "user-profile-picture">
+    <% if @venue.photo %>
+      <% image =  @venue.photo.path %>
+    <% else  %>
+      <% image =  "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
+    <% end %>
+    <img src="<%= cl_image_path(image, width: 300, height: 200, crop: :fill) %>" alt="sample image">
+  </div>
+  <div class="user-profile-details">
+    <h1>
+      <%= @venue.title%>
+    </h1>
+    <p>
+      <%= @venue.category%>, <%= @venue.location %>
+    </p>
+  </div>
+  <br><br>
+</div>
+
 <% @status = Appointment.where(venue_id: @venue.id) %>
 <% if @status.blank?  %>
-This Venue is showing no art :(
+  <h1 class="text-center">This Venue is showing no art :(</h1>
 <% else %>
-You can find displayed in <%= @venue.title %>:
 <br>
-<%  @status.each do |appt|%>
-<%= appt.start_date %> to <%= appt.end_date %> the <%= appt.artwork.category %>: <%=  link_to appt.artwork.title, artwork_path(appt.artwork.id)%> by renowned artist: <%= appt.artwork.owner.username %>
-<br>
-<% end %>
-<% end %>
 
-<% if @venue.photo? %>
-  <%= cl_image_tag @venue.photo.path, width: 200, height: 300, crop: :fill %>
+  <div class="row">
+  <%  @status.each do |appt|%>
+    <div class="col-md-4">
+      <div class="homecard">
+        <%=  cl_image_tag appt.artwork.photo.path, width: 200, height: 300, crop: :scale  %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+
+  <br>
+
 <% end %>
 
 <h3 class="text-center" style="margin: 40px">
@@ -22,3 +45,9 @@ You can find displayed in <%= @venue.title %>:
   <%= link_to "Edit", edit_venue_path(@venue) %>
   <%= link_to "Delete", venue_path(@venue), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
 </h3>
+
+
+
+
+
+
