--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -15,7 +15,7 @@
         <div class="row" >
           <div class="header-titles-left">
             <h1 style="margin: 0px;"><strong><%= @artwork.title %></strong></h1>
-            <h5>by <%= @artwork.owner.username %><%= @artwork.owner.fullname %></h5>
+            <h5>by <%= @artwork.owner.username %><%= @artwork.owner.first_name %></h5>
           </div>
         </div>
         <div class="row" >
