--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -39,7 +39,7 @@
                 <img class="card-img-top card-pic" src='<%= background_picture %>' alt="Card image cap">
                 <div class="card-block">
                   <p class="card-title"><%= artwork.title %></p>
-                  <p class="card-name ">       By <%= artwork.owner.username %></p>
+                  <p class="card-name ">       By <%= artwork.owner.username %><%= artwork.owner.fullname %><</p>
 
                   <div class="card-category"><%= artwork.category %></div>
 
