--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -28,8 +28,9 @@
             <% @artwork.each do |artwork| %>
             <div class="col-xs-12 col-md-6">
             <% if  artwork.photo.nil? %>
+              <% background_picture = "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
             <% else %>
-              <% background_picture = cl_image_path(artwork.photo.path, width: 300, height: 200, crop: :fill) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
+              <% background_picture = cl_image_path(artwork.photo.path, width: 300, height: 200, crop: :fill) %>
               <%= link_to artwork_path(artwork), class: "card-link" do %>
               <div class="card">
                 <img class="card-img-top card-pic" src='<%= background_picture %>' alt="Card image cap">
