--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -33,7 +33,7 @@
             <% else %>
             <% @result.each do |artwork| %>
             <div class="col-xs-12 col-md-6">
-              <% background_picture = cl_image_path(artwork.photo.path, width: 300, height: 200, crop: :fill) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
+              <% artwork.photo? ? (background_picture = cl_image_path(artwork.photo.path, width: 300, height: 200, crop: :fill)) : (background_picture = "https://unsplash.com/?photo=-LRuNvY8W7Q") %>
               <%= link_to artwork_path(artwork), class: "card-link" do %>
               <div class="card">
                 <img class="card-img-top card-pic" src='<%= background_picture %>' alt="Card image cap">
